Moonshot/res/tests/conditions/correct/condition_1.fox
if((3 + 'c') as char == 'f')
{

}