Moonshot/res/tests/conditions/bad/condition_1.fox
if((3 + 'c') as char == 'f')
{
	let foo : string = "booh!";
	foo = "booyah"!;
}